--- a/ai_upload.html
+++ b/ai_upload.html
@@ -1,1 +1,18 @@
-This is a placeholder for ai_upload.html in MobileTheatre Final Full Project.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>AI Verified Movie Upload</title>
+</head>
+<body style="font-family: Arial; background: #f0f0f0; padding: 40px;">
+  <h2>AI-Verified Movie Upload</h2>
+  <p>Upload your movie securely. AI will verify ownership and approve it.</p>
+  <form>
+    <input type="text" placeholder="Movie Title" /><br/><br/>
+    <input type="file" /><br/><br/>
+    <input type="text" placeholder="Company Name" /><br/><br/>
+    <input type="text" placeholder="Ownership Document ID" /><br/><br/>
+    <button>Submit for AI Verification</button>
+  </form>
+</body>
+</html>
