--- a/dashboard.html
+++ b/dashboard.html
@@ -1,1 +1,5 @@
-This is a placeholder for dashboard.html in MobileTheatre Final Full Project.
+<!DOCTYPE html>
+<html lang="en">
+<head><meta charset="UTF-8"/><title>User Dashboard</title></head>
+<body><h2>Your Purchased Movies</h2><p>Watch your movies here!</p></body>
+</html>
