--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-This is a placeholder for index.html in MobileTheatre Final Full Project.
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Admin Login</title>
+</head>
+<body>
+    <h1>Admin Panel</h1>
+    <p>If you are seeing this page, authentication has succeeded.</p>
+</body>
+</html>
