--- a/login.html
+++ b/login.html
@@ -1,1 +1,12 @@
-This is a placeholder for login.html in MobileTheatre Final Full Project.
+<!DOCTYPE html>
+<html>
+<head><title>Login - MobileTheatre</title></head>
+<body style="background:#000;color:#fff;font-family:sans-serif;">
+<h2>Login</h2>
+<form action="#" method="post">
+  Email: <input type="email" name="email" required /><br><br>
+  Password: <input type="password" name="password" required /><br><br>
+  <button type="submit">Login</button>
+</form>
+</body>
+</html>
